compiler/forget/crates/estree/src/snapshots/estree__tests__fixtures@import.json.snap
---
source: crates/estree/src/lib.rs
expression: "format!(\"Input:\\n{input}\\n\\nOutput:\\n{serialized}\")"
input_file: crates/estree/src/fixtures/import.json
---
Input:
{
    "type": "Program",
    "loc": {
      "source": null,
      "start": {
        "line": 1,
        "column": 0
      },
      "end": {
        "line": 1,
        "column": 26
      }
    },
    "body": [
      {
        "type": "ImportDeclaration",
        "loc": {
          "source": null,
          "start": {
            "line": 1,
            "column": 0
          },
          "end": {
            "line": 1,
            "column": 26
          }
        },
        "specifiers": [
          {
            "type": "ImportDefaultSpecifier",
            "loc": {
              "source": null,
              "start": {
                "line": 1,
                "column": 7
              },
              "end": {
                "line": 1,
                "column": 12
              }
            },
            "local": {
              "type": "Identifier",
              "loc": {
                "source": null,
                "start": {
                  "line": 1,
                  "column": 7
                },
                "end": {
                  "line": 1,
                  "column": 12
                }
              },
              "name": "React",
              "typeAnnotation": null,
              "optional": false,
              "range": [
                7,
                12
              ]
            },
            "range": [
              7,
              12
            ]
          }
        ],
        "source": {
          "type": "Literal",
          "loc": {
            "source": null,
            "start": {
              "line": 1,
              "column": 18
            },
            "end": {
              "line": 1,
              "column": 25
            }
          },
          "value": "react",
          "range": [
            18,
            25
          ],
          "raw": "'react'"
        },
        "attributes": [],
        "importKind": "value",
        "range": [
          0,
          26
        ]
      }
    ],
    "comments": [],
    "interpreter": null,
    "range": [
      0,
      26
    ],
    "sourceType": "module"
  }

Output:
{
  "body": [
    {
      "type": "ImportDeclaration",
      "specifiers": [
        {
          "type": "ImportDefaultSpecifier",
          "local": {
            "name": "React",
            "binding": null,
            "loc": {
              "source": null,
              "start": {
                "line": 1,
                "column": 7
              },
              "end": {
                "line": 1,
                "column": 12
              }
            },
            "range": {
              "start": 7,
              "end": 12
            }
          },
          "loc": {
            "source": null,
            "start": {
              "line": 1,
              "column": 7
            },
            "end": {
              "line": 1,
              "column": 12
            }
          },
          "range": {
            "start": 7,
            "end": 12
          }
        }
      ],
      "source": {
        "value": {
          "String": "react"
        },
        "raw": "'react'",
        "regex": null,
        "loc": {
          "source": null,
          "start": {
            "line": 1,
            "column": 18
          },
          "end": {
            "line": 1,
            "column": 25
          }
        },
        "range": {
          "start": 18,
          "end": 25
        }
      },
      "loc": {
        "source": null,
        "start": {
          "line": 1,
          "column": 0
        },
        "end": {
          "line": 1,
          "column": 26
        }
      },
      "range": {
        "start": 0,
        "end": 26
      }
    }
  ],
  "sourceType": "module",
  "loc": {
    "source": null,
    "start": {
      "line": 1,
      "column": 0
    },
    "end": {
      "line": 1,
      "column": 26
    }
  },
  "range": {
    "start": 0,
    "end": 26
  }
}
